firefox scroll fixed, performance fixes, transitionOverlap added

--- a/src/css/kuvaify.styl
+++ b/src/css/kuvaify.styl
@@ -5,7 +5,8 @@ body
   height 100%
 
 .kuvaify
-  hidden()
+  opacity 0
+  visibility hidden
   position fixed
   left 0
   top 0
@@ -13,7 +14,6 @@ body
   height @width
   font-family 'Source Sans Pro'
   background #101010
-  z-index 1
   box-sizing border-box
   margin 0
   padding 0
@@ -24,7 +24,8 @@ body
     margin 0
     padding 0
   &.visible
-    visible()
+    opacity 1
+    visibility visible
     z-index 2468
   a
     button()
@@ -34,14 +35,16 @@ body
         background rgba(black, 10%)
   .kuvaify-img
     center-both()
-    hidden()
+    opacity 0
+    visibility hidden
     max-width 100%
     max-height 100%
     z-index 2
     &.measure
       visibility visible
     &.visible
-      visible()
+      opacity 1
+      visibility visible
     &.cover-vertically
       max-width none
       max-height none
@@ -80,14 +83,16 @@ body
     right 0
   .kuvaify-menu-div
     center-both()
-    hidden()
+    opacity 0
+    visibility hidden
     width 8rem
     z-index 6
     background-color rgba(black, 40%)
     transition transform .4s ease, opacity .4s ease, visibility .4s ease
     transform translate(-50%, -46%)
     &.visible
-      visible()
+      opacity 1
+      visibility visible
       transform translate(-50%, -50%)
     +above(small-tablet)
       width 20rem
@@ -105,7 +110,7 @@ body
     strong
       color red
   .kuvaify-caption
-    hidden()
+    opacity 0
     position absolute
     left 0
     bottom 1rem
@@ -114,7 +119,7 @@ body
     background white
     z-index 4
     &.visible
-      visible()
+      opacity 1
     +above(small-tablet)
       bottom auto
       top 1rem
@@ -128,12 +133,12 @@ body
     height @width
   .kuvaify-spinner
     center-both()
-    hidden()
+    opacity 0
     padding 1rem
     background #101010
     transition opacity .4s ease
     &.visible
-      visible()
+      opacity 1
   .sk-folding-cube
     width 40px
     height 40px
